apps/matrix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
    spec:
      securityContext:
        fsGroup: 991
      containers:
        - name: synapse
          image: matrixdotorg/synapse:v1.162.0
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matrix-data
