apps/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: default
spec:
  selector:
    app: matrix
  ports:
    - port: 8008
      targetPort: 8008
